[gd_scene load_steps=4 format=3 uid="uid://c62uwhs35dmk"]

[ext_resource type="Script" path="res://Scenes/MatchScene/MatchUI/NameCard.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://bamxyyq7k8h0o" path="res://Textures/Captain.png" id="3"]
[ext_resource type="Texture2D" uid="uid://b7ieonjvgxqyi" path="res://Textures/LiberoIcon.png" id="4"]

[node name="NameCard" type="ColorRect"]
custom_minimum_size = Vector2(250, 100)
offset_right = 250.0
offset_bottom = 80.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("2")

[node name="FirstName" type="Label" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 32.0
offset_right = 248.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 14
text = "Karteez"

[node name="LastName" type="Label" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 52.0
offset_right = 248.0
offset_bottom = 100.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Arminhalf"

[node name="Skill" type="Label" parent="."]
layout_mode = 0
offset_right = 250.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "84"
horizontal_alignment = 2

[node name="Role" type="Label" parent="."]
layout_mode = 0
offset_right = 250.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Opposite"
horizontal_alignment = 1

[node name="Height" type="Label" parent="."]
layout_mode = 0
offset_right = 250.0
offset_bottom = 27.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "199.9cm"

[node name="CaptainIcon" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 222.499
offset_top = 66.9187
offset_right = 262.499
offset_bottom = 106.919
texture = ExtResource("3")
expand_mode = 1

[node name="LiberoIcon" type="TextureRect" parent="."]
modulate = Color(0.898039, 1, 0, 1)
layout_mode = 0
offset_left = 222.499
offset_top = 21.9187
offset_right = 262.499
offset_bottom = 61.9187
texture = ExtResource("4")
expand_mode = 1

[node name="SubstituteButton" type="Button" parent="."]
layout_mode = 0
offset_left = 6.0
offset_top = 89.0
offset_right = 94.0
offset_bottom = 109.0
text = "Substitute"

[node name="CaptainButton" type="Button" parent="."]
layout_mode = 0
offset_left = 104.0
offset_top = 89.0
offset_right = 192.0
offset_bottom = 109.0
text = "Captain"

[connection signal="mouse_entered" from="." to="." method="_on_NameCard_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_NameCard_mouse_exited"]
[connection signal="pressed" from="SubstituteButton" to="." method="_on_SubstituteButton_pressed"]
[connection signal="pressed" from="CaptainButton" to="." method="_on_captain_button_pressed"]
